--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta charset="utf-8"/>
 
-        <title>Retro Bowl</title>
+        <title>Retro Bowl Unblocked212</title>
 
         <style>
             body {
